<resources>
    <string name="app_name">Dynamic Island</string>
    <string name="subscribe_KEY1" >com.charanharsha.removeads</string>
    <string name="qintitle"><![CDATA[Play & Win Coins]]></string>
    <string name="qintdes"><![CDATA[Win 5,00,000 Coins & More]]></string>
    <string name="qintitle1">Play Now and Earn Up to 50,000</string>
    <string name="qintdes1"><![CDATA[Play and Earn 5,00,000 Coins & Mores]]></string>
    <string name="qnativetitle"><![CDATA[Play & Win Coins]]></string>
    <string name="a_this_application_is_currently_works_when_gestures_are_enabled_instead_of_navigation_keys_for_android_10_and_above">A. This application is currently works when gestures are enabled instead of navigation keys for Android 10 and above</string>
    <string name="a_we_don_t_collect_any_sort_of_data_from_mobile_all_permission_are_only_for_application_functionality_to_work_you_can_check_our_privacy_policy_link_at_google_play_store">A. We don\'t collect any sort of data from mobile, all permission are only for application functionality to work. you can check our privacy policy link at Google Play store</string>
    <string name="a_you_need_to_give_accessibility_permission_to_allow_this_application_to_start_work">A. You need to give accessibility permission to allow this application to start work</string>
    <string name="a_you_need_to_give_notificaiton_access_permission_for_this_functionality_to_work">A. You need to give notificaiton access permission for this functionality to work</string>
    <string name="a_you_need_to_give_write_setting_permission_for_this_functionality_to_work">A. You need to give write setting permission for this functionality to work</string>
    <string name="a_you_need_to_re_enable_the_accessibility_permission_from_application_settings_again_for_users_using_android_11_and_above_are_needed_to_repeat_the_enable_process_two_times_it_mean_that_they_have_to_enable_disable_and_then_again_enable_disable_the_service_two_times_in_order_to_start_working_properly">A. You need to re-enable the accessibility permission from application settings again. For users using Android 11 and above are needed to repeat the enable process two times. it mean that they have to enable/disable and then again enable disable the service two times in order to start working properly.</string>
    <string name="accessibility_desc">This service allows the use of overlay window on top of the screen for notifications. \n\nNo data is stored on the device or sent over the internet.</string>
    <string name="accountName">Harsha Apps</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="ads_already_removed">Ad already removed</string>
    <string name="airbuds">AirBuds</string>
    <string name="airplane">Airplane</string>
    <string name="airpods">Airpods</string>
    <string name="alarm">Alarm</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="auto_brightness">Brightness</string>
    <string name="auto_hide_system_notification">Auto hide default call heads-up</string>
    <string name="auto_refresh_wallpaper">Auto Refresh Wallpaper</string>
    <string name="auto_rotation">Rotation</string>
    <string name="background">Change mobile wallpaper</string>
    <string name="backgroundImage">BackgroundImage</string>
    <string name="backgroundImageName">computer_bg_image</string>
    <string name="background_btn">Wallpapers</string>
    <string name="battery_percentage">%1d%%</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_permission">Bluetooth Permission not granted!</string>
    <string name="blutooth_permission_txt">This app requires this permission to control bluetooth</string>
    <string name="brightness_auto">Auto</string>
    <string name="brightness_manual">Manual</string>
    <string name="brightness_mode">Brightness</string>
    <string name="camera">Camera</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="change_pattern">Change Pattern</string>
    <string name="charging_txt">Charging</string>
    <string name="clear_all">Clear all</string>
    <string name="clock">Clock</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">select</string>
    <string name="control_center">Control Center</string>
    <string name="control_center_layout">Notification Island Drawing permission</string>
    <string name="control_center_permissions">Control Center Permissions</string>
    <string name="controls">Controls</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="custom_background">Select wallpaper from mobile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data_saver">Data Saver</string>
    <string name="date_format">EE, dd MMM</string>
    <string name="default_color_image">default color image</string>
    <string name="dialog_message">Dialog message</string>
    <string name="dialog_tittle">Dialog tittle</string>
    <string name="drawer_app_name">Dynamic Island</string>
    <string name="dummy_date">Mon 25 March</string>
    <string name="empty" />
    <string name="enable_bluetooth_permission">Enable Bluetooth permission</string>
    <string name="enable_control_center">Enable Dynamic Island Notification</string>
    <string name="enable_control_center_options">Enable Control Center Options</string>
    <string name="enable_location">Enable Location</string>
    <string name="enable_music_player">Enable Music Player</string>
    <string name="enable_notification_permission">Enable Notification Permission</string>
    <string name="enable_notifications_options">Enable Notifications</string>
    <string name="error_camera_app_not_found">Camera app not found</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="expand_button_title">Advanced</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="flight_mode">Flight Mode</string>
    <string name="full_txt">Full</string>
    <string name="gmail">Gmail</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="help">Help</string>
    <string name="hotspot">Hotspot</string>
    <string name="image_blur">Image blur</string>
    <string name="image_picker_provider_authority_suffix">.imagepicker.provider</string>
    <string name="iv_desc">informations</string>
    <string name="keyboard_picker">Keyboard Picker</string>
    <string name="label">Label</string>
    <string name="live_blur">Live blur</string>
    <string name="localWallPaperName">computerlockwallpaper.jpg</string>
    <string name="location">Location</string>
    <string name="lock_sound">Lock Sound</string>
    <string name="mobile_data">Data</string>
    <string name="more">More</string>
    <string name="more_notification">%1$d notification.</string>
    <string name="more_notifications">%1$d notifications.</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="nfc">NFC</string>
    <string name="no_bluetooth_permission">No bluetooth permission. Try again!</string>
    <string name="not_set">Not set</string>
    <string name="notification_center">Notifications</string>
    <string name="notification_service_label">Android Style Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="cancel">cancel</string>
    <string name="open_system_shade">Open system shade</string>
    <string name="percent">%%</string>
    <string name="permission_camera_denied">Camera permission is needed to take a picture. Please allow permission from Settings &gt; Permissions.</string>
    <string name="permission_txt">This app requires setting access so that you can access all the feature.</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="previous">Previous</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="q_brightness_orientation_and_sound_controls_are_not_working">Q. Brightness, Orientation and sound controls are not working</string>
    <string name="q_controls_are_not_appearing_after_some_time">Q. Dynamic island is not appearing after update</string>
    <string name="q_do_we_collect_any_sort_of_data">Q. Do we collect any sort of data?</string>
    <string name="q_how_enable_control_center">Q. How enable Dynamic island notifications?</string>
    <string name="q_notification_are_not_showing">Q. Notification are not showing</string>
    <string name="q_wifi_and_data_controls_are_not_working">Q. Wifi and data controls are not working</string>
    <string name="quick_settings_bluetooth_detail_empty_text">No paired devices available</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_cast_title">Screen Cast</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="quick_settings_connected">Connected</string>
    <string name="quick_settings_connected_battery_level">Connected, battery %1$s</string>
    <string name="quick_settings_connecting">Connecting…</string>
    <string name="quick_settings_dnd_alarms_label">Alarms only</string>
    <string name="quick_settings_dnd_label">Do Not Disturb</string>
    <string name="quick_settings_dnd_none_label">Total silence</string>
    <string name="quick_settings_dnd_priority_label">Priority only</string>
    <string name="quick_settings_done">Done</string>
    <string name="quick_settings_flashlight_label">Flashlight</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_location_label">Location</string>
    <string name="quick_settings_more_settings">More settings</string>
    <string name="quick_settings_nfc_label">NFC</string>
    <string name="quick_settings_night_display_label">Night Light</string>
    <string name="quick_settings_rotation_unlocked_label">Auto-rotate</string>
    <string name="quick_settings_tiles_default">wifi,cell,battery,dnd,flashlight,rotation,bt,airplane,location,brightness,hotspot,saver,cast,dark,night,ringer,nfc,stock,sim</string>
    <string name="quick_settings_tiles_more">,ss,rec,sync,screen,timeout,lock,clock,camera,keyboard</string>
    <string name="quick_settings_ui_mode_night_label">Dark mode,Dark theme</string>
    <string name="quick_settings_wifi_detail_empty_text">No Wi-Fi networks available</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="quick_settings_wifi_secondary_label_transient">Turning on…</string>
    <string name="quick_settings_wifi_secondary_label_transient_off">Turning off…</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating_dialog_experience">Please rate 5 star to support developer. Thank you so much!</string>
    <string name="ok">Ok</string>
</resources>