<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_above="@+id/btm1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
            android:textColor="@color/color_text"
            android:textSize="30sp" />

        <ScrollView
            android:id="@+id/questions_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ok_btn"
            android:layout_below="@+id/title_help">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q_how_enable_control_center"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_you_need_to_give_accessibility_permission_to_allow_this_application_to_start_work"
                    android:textColor="@color/color_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/q_notification_are_not_showing"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_you_need_to_give_notificaiton_access_permission_for_this_functionality_to_work"
                    android:textColor="@color/color_text" />

                <TextView android:textStyle="bold" android:textColor="@color/color_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/q_controls_are_not_appearing_after_some_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_you_need_to_re_enable_the_accessibility_permission_from_application_settings_again_for_users_using_android_11_and_above_are_needed_to_repeat_the_enable_process_two_times_it_mean_that_they_have_to_enable_disable_and_then_again_enable_disable_the_service_two_times_in_order_to_start_working_properly"
                    android:textColor="@color/color_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/q_do_we_collect_any_sort_of_data"
                    android:textColor="@color/color_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_we_don_t_collect_any_sort_of_data_from_mobile_all_permission_are_only_for_application_functionality_to_work_you_can_check_our_privacy_policy_link_at_google_play_store"
                    android:textColor="@color/color_text" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rect_blue"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/custom_ad_banner"
            layout="@layout/ads_banner_layout"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>
