<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_above="@+id/btm1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="The following permissions are \n required to run the application"
            android:textColor="@color/setting_tv_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_section_margin"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/enable_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/ic_layout_icon" />

                <TextView
                    android:id="@+id/textViewLockscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/setting_img_text_margin"
                    android:layout_toEndOf="@+id/enable_iv"
                    android:text="@string/control_center_layout"
                    android:textColor="@color/setting_tv_color"
                    android:textSize="@dimen/setting_tv_size" />

                <ToggleButton
                    android:id="@+id/toggle_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="3dp"
                    android:background="@null"
                    android:button="@drawable/btntoggle"
                    android:checked="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/enable_notification_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_section_margin"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/enable_notification_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_pr_notification_icon" />

                <TextView
                    android:id="@+id/tv_enable_notification"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/setting_img_text_margin"
                    android:layout_toEndOf="@+id/enable_notification_iv"
                    android:text="@string/enable_notifications_options"
                    android:textColor="@color/setting_tv_color"
                    android:textSize="@dimen/setting_tv_size" />

                <ToggleButton
                    android:id="@+id/toggle_notification_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:button="@drawable/btntoggle"
                    android:checked="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/enable__bluetooth_access_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/setting_section_margin"
                android:orientation="vertical"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/enable__bluetooth_access_iv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_pr_notification_icon" />

                <TextView
                    android:id="@+id/tv_enable__bluetooth_access"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/setting_img_text_margin"
                    android:layout_toEndOf="@+id/enable__bluetooth_access_iv"
                    android:text="@string/enable_bluetooth_permission"
                    android:textColor="@color/setting_tv_color"
                    android:textSize="@dimen/setting_tv_size" />

                <ToggleButton
                    android:id="@+id/toggle_bluetooth_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:button="@drawable/btntoggle"
                    android:checked="false"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>

            <Button
                android:id="@+id/next_btn"
                android:layout_width="290dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/rect_blue"
                android:text="Next"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btm1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <include
            android:id="@+id/custom_ad_banner"
            layout="@layout/ads_banner_layout"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>
